# taketok

./: .gitignore  LICENSE.txt  README.md  dependencies.txt  package-lock.json  package.json  requirements.txt  setup.sh
app/: package-lock.json
app/src/: App.tsx
app/src-tauri/: tauri.conf.json
db/: create_schema.sql
dev/: insert_demo_data.sql  insert_source_links_from_file.py
dev/docs/: python-dependencies.txt
doc/: notes.md
src/: App.tsx  data_importer.py  dev_clear_demo_cells.py  styles.css  taketok.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/mock_api_data/: default.json
src-tauri/src/: commands.rs  config.rs  core_api_client.rs  dao.rs  error.rs  main.rs  models.rs  path_utils.rs  schema.rs  state.rs  utils.rs
src-tauri/src/db/: dao.rs  db_models.rs  mod.rs  repository.rs  schema.rs
src/components/PageCarousel/: Navbar.tsx  PageCarousel.tsx  VideoOverlay.tsx
src/components/VideoCard/: VideoCard.css  VideoCard.tsx
src/db/: dao.py  database.py  transactions.py  views.py
src/pages/: DownloadPage.tsx  ImportPage.tsx  LibraryPage.tsx
src/shared/: models.ts
src/spreadsheet/: gcp_auth.py  google_sheets.py  spreadsheet.py
src/tiktok/: tiktok.py
src/transcribe/: transcribe.py
src/util/: config.py  path_utils.py
src_python/: data_importer.py  generate-test-data.py  taketok.py  taketok_api.py  video_importer.py
src_python/controller/: data_import_controller.py
src_python/db/: database.py  transactions.py  views.py
src_python/transcribe/: transcribe.py
src_python/util/: config.py  helpers.py  path_utils.py
(+11 files in other folders)
